EQC-43 navbar fix + menu on small screens fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,9 @@
     .button {
         @apply px-4 py-2 rounded-md font-semibold text-lg bg-white;
     }
+    .button-nav {
+        @apply flex items-center justify-start gap-x-2 hover:bg-primary rounded-xl transition duration-500 ease-in-out hover:text-white;
+    }
 }
 
 @layer utilities {
